--- a/server/package.json
+++ b/server/package.json
@@ -15,7 +15,8 @@
     "typescript": "^3.9.3"
   },
   "scripts": {
-    "dev": "ts-node-dev src/server.ts",
-    "knex:migrate": "knex migrate:latest --knexfile knexfile.ts migrate:latest"
+    "dev": "ts-node-dev --ignore-watch node_modules src/server.ts",
+    "knex:seed": "knex --knexfile knexfile.ts seed:run",
+    "knex:migrate": "knex --knexfile knexfile.ts migrate:latest"
   }
 }
